--- a/.env.testing
+++ b/.env.testing
@@ -2,11 +2,11 @@ APPLICATION_URL=http://localhost:8000
 APP_KEY=base64:aTnCVhuno9hSwUaxRygtI+vgMwmDCwdmzJ5H64J4mQY=
 APP_DEBUG=true
 APP_ENV = testing
-DB_CONNECTION=test_mysql
+DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=lesson08_test
+DB_DATABASE=lesson08
 DB_USERNAME=root
 DB_PASSWORD=root
 CACHE_DRIVER=array
-TEST_MYSQL_MAIN_DATABASE=lesson08_test
+TEST_MYSQL_MAIN_DATABASE=lesson08
